--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,48 @@
 /* ====================== [ Start Typography  ] ====================== */
 /* Add this to your existing CSS or in a new <style> tag */
 
+
+/* Styles for the Popup Image Container */
+.popup-image-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 9999;
+    display: flex; /* Use flexbox for centering */
+    align-items: center; /* Vertically center content */
+    justify-content: center; /* Horizontally center content */
+}
+
+.popup-image-content {
+    background-color:transparent;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    position: relative;
+    margin-top: 50px;
+
+}
+
+.popup-image-content img {
+    max-width: 600px; /* Ensure the image doesn't exceed its container */
+    max-height: 80%; /* Limit the image height to 80% of viewport height */
+}
+/* Styles for the Close Button */
+.close-popup-image {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 40px;
+    color: #fff;
+}
+
+
+
 .popup-tab {
   position: fixed;
   bottom: 5px; /* Adjust the position as needed */
